--- a/app/main.css
+++ b/app/main.css
@@ -1,7 +1,63 @@
+html {
+    font-family: 'Baumans', cursive;
+}
+
+body {
+    background-color: #000000;
+    color: #FFFFFF
+}
+
+body > div {
+    width: 600px;
+    margin-left: 300px;
+}
+
+body > div > h2 {
+    text-align : center;
+    font-size: 32px;
+}
+
 .container {
-    border: 1px solid black;
+    border-top: 5px solid white;
+    border-bottom: 5px solid white;
     height: 500px;
     z-index: -1;
     width: 750px;
     margin-left: 50px
+}
+
+.container .divider {
+    position: absolute;
+    border-left: 5px dashed white;
+    width: 1px;
+    height: 500px;
+    z-index: -1px;
+    left: 750px;
+}
+
+.game_controls {
+    margin-bottom: 25px;
+}
+
+.game_controls span {
+    font-size: 24px;
+}
+
+.game_controls span:last-child {
+    float: right;
+    text-align: right;
+}
+
+.game_controls button {
+    margin: 0 auto;
+    padding: 1.6em 1em;
+    max-width: 20em;
+    color: #fff;
+    line-height: 1;
+    text-align: center;
+    text-decoration: none;
+    background-color: #2da3ee;
+    border: 1px solid #0769a7;
+    border-radius: 3px;
+    box-shadow: inset 0 0 7px 0 rgba(white, 0.5);
 }
